# goit-pycore-hw-04

./: link2salary.dir  main.py  pyproject.toml  task01.py  task02.py  task03.py  task04.py
