[project]
name = "goit-pycore-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "dvankevich",email = "dvankevich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (==0.4.6)",
    "black (>=26.1.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
